Styled the heading section of the page

--- a/index.html
+++ b/index.html
@@ -13,12 +13,15 @@
     .attribution { font-size: 11px; text-align: center; }
     .attribution a { color: hsl(228, 45%, 44%); }
   </style>
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
 
-  <header>
+  <header class="container">
     <img src="/assets/images/logo.svg" alt="logo" class="logo">
     <nav>
+      <img src="/assets/images/bars-menu-icon.svg" alt="bars-menu" class="bars">
       <ul>
         <li><a href="#">Home</a></li>
         <li><a href="#">New</a></li>
@@ -27,6 +30,7 @@
         <li><a href="#">Categories</a></li>
       </ul>
     </nav>
+    <script src="/scripts/menu-btn.js"></script>
   </header>
 
   <main>
@@ -84,7 +88,7 @@
         </h3>
         <p>How the pandemic has sparked fresh opportunities.</p>
       </div>
-      
+
     </section>
   </main>
   
