Completed the design

--- a/index.html
+++ b/index.html
@@ -33,13 +33,17 @@
     <script src="/scripts/menu-btn.js"></script>
   </header>
 
-  <main>
+  <main class="container">
     <section class="landing">
+      <img src="/assets/images/image-web-3-desktop.jpg" alt="web-3">
+
       <h2>The Bright Future of Web 3.0?</h2>
 
-      <p>We dive into the next evolution of the web that claims to put the power of the platforms back into the hands of the people. But is it really fulfilling its promise?</p>
+      <div class="text">
+        <p>We dive into the next evolution of the web that claims to put the power of the platforms back into the hands of the people. But is it really fulfilling its promise?</p>
 
-      <button>Read more</button>
+        <button>Read more</button>
+      </div>
     </section>
 
     <section class="new">
@@ -64,29 +68,35 @@
 
       <div class="topic-card">
         <img src="/assets/images/image-retro-pcs.jpg" alt="retro-pcs">
-        <h3>
+        <div class="text">
           <span class="number">01</span>
-          Reviving Retro PCs
-        </h3>
-        <p>What happens when old PCs are given modern upgrades?</p>
+          <h3>
+            Reviving Retro PCs
+          </h3>
+          <p>What happens when old PCs are given modern upgrades?</p>
+        </div>
       </div>
 
       <div class="topic-card">
         <img src="/assets/images/image-top-laptops.jpg" alt="top-laptops">
-        <h3>
+        <div class="text">
           <span class="number">02</span>
-          Top 10 Laptops of 2022
-        </h3>
-        <p>Our best picks for various needs and budgets.</p>
+          <h3>
+            Top 10 Laptops of 2022
+          </h3>
+          <p>Our best picks for various needs and budgets.</p>
+        </div>
       </div>
 
       <div class="topic-card">
         <img src="/assets/images/image-gaming-growth.jpg" alt="gaming-growth">
-        <h3>
-          <span class="number">01</span>
-          The Growth of Gaming
-        </h3>
-        <p>How the pandemic has sparked fresh opportunities.</p>
+        <div class="text">
+          <span class="number">03</span>
+          <h3>
+            The Growth of Gaming
+          </h3>
+          <p>How the pandemic has sparked fresh opportunities.</p>
+        </div>
       </div>
 
     </section>
@@ -95,7 +105,7 @@
   <footer>
     <div class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
+      Coded by <a href="#https://www.frontendmentor.io/profile/husamXA1">Husam</a>.
     </div>
   </footer>
 </body>
