Cleaned the project files

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="32x32" href=".assets/images/favicon-32x32.png">
   
   <title>Frontend Mentor | News homepage</title>
 
@@ -19,9 +19,9 @@
 <body>
 
   <header class="container">
-    <img src="/assets/images/logo.svg" alt="logo" class="logo">
+    <img src="assets/images/logo.svg" alt="logo" class="logo">
     <nav>
-      <img src="/assets/images/bars-menu-icon.svg" alt="bars-menu" class="bars">
+      <img src="assets/images/bars-menu-icon.svg" alt="bars-menu" class="bars">
       <ul>
         <li><a href="#">Home</a></li>
         <li><a href="#">New</a></li>
@@ -30,12 +30,12 @@
         <li><a href="#">Categories</a></li>
       </ul>
     </nav>
-    <script src="/scripts/menu-btn.js"></script>
+    <script src="scripts/menu-btn.js"></script>
   </header>
 
   <main class="container">
     <section class="landing">
-      <img src="/assets/images/image-web-3-desktop.jpg" alt="web-3">
+      <img src="assets/images/image-web-3-desktop.jpg" alt="web-3">
 
       <h2>The Bright Future of Web 3.0?</h2>
 
@@ -67,7 +67,7 @@
     <section class="topics">
 
       <div class="topic-card">
-        <img src="/assets/images/image-retro-pcs.jpg" alt="retro-pcs">
+        <img src="assets/images/image-retro-pcs.jpg" alt="retro-pcs">
         <div class="text">
           <span class="number">01</span>
           <h3>
@@ -78,7 +78,7 @@
       </div>
 
       <div class="topic-card">
-        <img src="/assets/images/image-top-laptops.jpg" alt="top-laptops">
+        <img src="assets/images/image-top-laptops.jpg" alt="top-laptops">
         <div class="text">
           <span class="number">02</span>
           <h3>
@@ -89,7 +89,7 @@
       </div>
 
       <div class="topic-card">
-        <img src="/assets/images/image-gaming-growth.jpg" alt="gaming-growth">
+        <img src="assets/images/image-gaming-growth.jpg" alt="gaming-growth">
         <div class="text">
           <span class="number">03</span>
           <h3>
